--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="head">
         <h1 class="head_title">Мое резюме на должность разработчика на JavaScript</h1>
         <div class="header">
-            <img src="My_photo.jpeg" alt="Мое фото должно быть здесь!" class="header_photo">
+            <img src="images/My_photo.jpeg" alt="Мое фото должно быть здесь!" class="header_photo">
             <p class="header_text">
                 Я Власенко Андрей - начинающий веб-разработчик. Занимаюсь разработкой как frontend части видимой пользователю, так и beckend части скрытой от пользователя. Мне нравится тем чем я занимаюсь - это интересно. Возможность видеть результат своей работы привлекло меня к данному направлению. Также я люблю изучать новые технологии и применять их на практике. Быстро обучаюсь иЫ усваиваю новую информацию.
             </p>
@@ -24,15 +24,15 @@
                 <ul class="my_person_items">
                     <li class="my_person_item">HTML - <span class="my_person_italic">отлично разбираюсь в каркасе страницы, освоил навыки семантики, которые в частности применил даже на данной странице;</span></li>
                     <li class="my_person_item">CSS - <span class="my_person_italic">освоил стилизацию, так же адаптивную верстку под различные группы устройст;</span></li>
-                    <li class="my_person_item">JavaScript - <span class="my_person_italic">разбираюсь в DOM-дереве, всех типах данных</span></li>
-                    <li class="my_person_item">Git и GitHub - <span class="my_person_italic">работаю с этими  технологиями, в том числе знаю как решить все возникающие проблемы через командную строку Git, также разбираюсь в возможностях GitHub (Issues, Pull request, GitHub Pages и остальное)</span></li>
+                    <li class="my_person_item">JavaScript - <span class="my_person_italic">разбираюсь в типах данных, взаимодействии с DOM-деревом, уровень владени я начальный;</span></li>
+                    <li class="my_person_item">Git и GitHub - <span class="my_person_italic">работаю с этими  технологиями, в том числе знаю как решить все возникающие проблемы через командную строку Git, также разбираюсь в возможностях GitHub (Issues, Pull request, GitHub Pages и остальное).</span></li>
                 </ul>
             </p>
         </section>
         <section class="my_works">
             <h2 class="my_works_header">Мои работы</h2>
             <div class="noemi">
-                <p class="noemi_text">Вот один из моих проектов сайта выложенный на GitHub, там также применена адаптивная вестка: <a href="https://andrewvenko.github.io/Diplom-work-noemi/" class="noemi_link">ссылка на проект</a></p>
+                <p class="noemi_text">Вот один из моих проектов сайта выложенный на GitHub, там также применена адаптивная верстка: <a href="https://andrewvenko.github.io/Diplom-work-noemi/" class="noemi_link">ссылка на проект</a> (можно посмотреть как реагирует сайт на размер окна браузера).</p>
                 </div>
             </div>
         </section>
@@ -41,9 +41,9 @@
         <div class="contacts">
             <h2 class="contacts_header">Мои контакты для связи:</h2>
             <p class="contacts_text">
-                <ul>
-                    <li>Почта: </li>
-                    <li>Телефон</li>
+                <ul class="contacts_items">
+                    <li class="contacts_item">Почта: <span class="contacts_item_italic">andrewvenko95@gmail.com</span></li>
+                    <li class="contacts_item">Телефон: <span class="contacts_item_italic">+7912-287-10-81</span></li>
                 </ul>
             </p>
         </div>
