Add support from phone

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </p>
             <p class="contacts_text">
                 <ul class=" contacts_text contacts_items">
-                    <li class="contacts_item">Почта: <span class="contacts_item_italic">andrewvenko95@gmail.com</span></li>
+                    <li class="contacts_item">Почта: <span class="contacts_item_italic mail">andrewvenko95@gmail.com</span></li>
                     <li class="contacts_item">Телефон: <span class="contacts_item_italic">+7912-287-10-81</span></li>
                 </ul>
             </p>
