--- a/index.html
+++ b/index.html
@@ -118,49 +118,49 @@
                 <div class="my-sertificates__blocks">
                     <div class="layout my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-HTML.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-HTML.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-HTML.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-HTML.pdf" target="_blank">
                             HTML-верстка с нуля до первого макета
                         </a>
                     </div>
                     <div class="adaptive-layout my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-Mobile.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Mobile.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-Mobile.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Mobile.pdf" target="_blank">
                             Адаптивная и мобильная верстка
                         </a>
                     </div>
                     <div class="git my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-Git.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Git.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-Git.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Git.pdf" target="_blank">
                             Git
                         </a>
                     </div>
                     <div class="basics-JS my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-Base_JavaScript.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Base_JavaScript.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-Base_JavaScript.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Base_JavaScript.pdf" target="_blank">
                             Основы JavaScript
                         </a>
                     </div>
                     <div class="basics-JS-browser my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-Base_JavaScript_Browser.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Base_JavaScript_Browser.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-Base_JavaScript_Browser.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Base_JavaScript_Browser.pdf" target="_blank">
                             Основы JavaScript в браузере
                         </a>
                     </div>
                     <div class="advanced-JS my-sertificates__block">
                         <object>
-                            <embed class="my-sertificates__embet" src="/certificates/Sertificate-Advanced_JavaScript.pdf" type="application/pdf">
+                            <embed class="my-sertificates__embet" src="certificates/Sertificate-Advanced_JavaScript.pdf" type="application/pdf">
                         </object>
-                        <a class="my-sertificates__link my-sertificates__link--hover" href="./certificates/Sertificate-Advanced_JavaScript.pdf" target="_blank">
+                        <a class="my-sertificates__link my-sertificates__link--hover" href="certificates/Sertificate-Advanced_JavaScript.pdf" target="_blank">
                             Продвинутый JS современные возможности
                         </a>
                     </div>
